# charon

./: .gitignore  .pre-commit-config.yaml  PROPOSALS.md  QUICKSTART.md  README.md  docker-compose.yml  mkdocs.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/cli/: __init__.py  fitness_check.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  models.py  parsing_models.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/services/: __init__.py  analysis_orchestrator_service.py  analyzer_service.py  clustering_service.py  complexity_service.py  diagram_service.py  diff_service.py  documentation_service.py  export_service.py  fitness_orchestrator_service.py  fitness_service.py  github_service.py  graph_service.py  health_score_service.py  impact_service.py  layout_service.py  metrics_service.py  multi_language_analyzer.py  progress_service.py  refactoring_service.py  temporal_orchestrator_service.py  temporal_service.py
backend/app/templates/: documentation.html
backend/app/utils/: __init__.py  ast_parser.py  color_generator.py  cycle_detector.py  import_resolver.py
backend/examples/: fitness_rules_example.yaml  fitness_rules_simple.json
backend/examples/profiling/: README_PROFILING.md  cprofile_example.prof  profile_test.py  pyspy_example.json
backend/tests/: conftest.py  test_analyzer.py  test_fitness_service.py
backend/tests/e2e/: test_app_endpoints.py
backend/tests/unit/: test_analysis_orchestration.py  test_analyzer.py  (+20 more)
(+205 files in other folders)
